// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test ReportStatistics should match snapshot 1`] = `
<div>
  <div
    class="ant-page-header"
  >
    <div
      class="ant-page-header-heading"
    >
      <div
        class="ant-page-header-heading-left"
      >
        <span
          class="ant-page-header-heading-title"
        >
          reportStatistics.title
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
            >
              <span
                aria-label="info-circle"
                class="anticon anticon-info-circle text-orange"
                role="img"
                style="font-size: 14px; margin-left: 6px;"
              >
                <svg
                  aria-hidden="true"
                  data-icon="info-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                  />
                  <path
                    d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                  />
                </svg>
              </span>
            </div>
          </div>
        </span>
      </div>
      <span
        class="ant-page-header-heading-extra"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-default"
              data-testid="refreshReportStatistics"
              type="button"
            >
              <span
                aria-label="sync"
                class="anticon anticon-sync"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="sync"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M168 504.2c1-43.7 10-86.1 26.9-126 17.3-41 42.1-77.7 73.7-109.4S337 212.3 378 195c42.4-17.9 87.4-27 133.9-27s91.5 9.1 133.8 27A341.5 341.5 0 01755 268.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.7 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c0-6.7-7.7-10.5-12.9-6.3l-56.4 44.1C765.8 155.1 646.2 92 511.8 92 282.7 92 96.3 275.6 92 503.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8zm756 7.8h-60c-4.4 0-7.9 3.5-8 7.8-1 43.7-10 86.1-26.9 126-17.3 41-42.1 77.8-73.7 109.4A342.45 342.45 0 01512.1 856a342.24 342.24 0 01-243.2-100.8c-9.9-9.9-19.2-20.4-27.8-31.4l60.2-47a8 8 0 00-3-14.1l-175.7-43c-5-1.2-9.9 2.6-9.9 7.7l-.7 181c0 6.7 7.7 10.5 12.9 6.3l56.4-44.1C258.2 868.9 377.8 932 512.2 932c229.2 0 415.5-183.7 419.8-411.8a8 8 0 00-8-8.2z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </span>
    </div>
  </div>
  <section
    class="padding-content"
  >
    <div
      class="ant-card ant-card-bordered"
    >
      <div
        class="ant-card-body"
      >
        reportStatistics.ceTips
        <div
          class="ant-typography"
        >
          <ul>
            <li>
              <a
                href="https://actiontech.github.io/sqle-docs-cn/"
              >
                https://actiontech.github.io/sqle-docs-cn/
              </a>
            </li>
            <li>
              <a
                href="https://www.actionsky.com/"
              >
                https://www.actionsky.com/
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </section>
  <section
    class="page-report-statistics-namespace"
  >
    <div
      class="react-grid-layout"
      style="height: 3768px;"
    >
      <div
        class="react-grid-item static cssTransforms react-resizable-hide react-resizable"
        style="height: 120px; position: absolute; transform: translate(24px,24px); width: -48px;"
      >
        <div
          class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
          style="height: 100%;"
        >
          <div
            class="ant-card-head"
          >
            <div
              class="ant-card-head-wrapper"
            >
              <div
                class="ant-card-head-title"
              >
                reportStatistics.orderTotalNumbers.title
              </div>
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center statistics-value-style"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                <div
                  class="ant-statistic"
                >
                  <div
                    class="ant-statistic-content"
                  >
                    <span
                      class="ant-statistic-content-value"
                    >
                      <span
                        class="ant-statistic-content-value-int"
                      >
                        0
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                <span>
                  /
                </span>
              </div>
              <div
                class="ant-space-item"
              >
                <div
                  class="ant-statistic"
                >
                  <div
                    class="ant-statistic-content"
                  >
                    <span
                      class="ant-statistic-content-value"
                    >
                      <span
                        class="ant-statistic-content-value-int"
                      >
                        0
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <span
          class="react-resizable-handle react-resizable-handle-se"
        />
      </div>
      <div
        class="react-grid-item static cssTransforms react-resizable-hide react-resizable"
        style="height: 120px; position: absolute; transform: translate(24px,168px); width: -48px;"
      >
        <div
          class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
          style="height: 100%;"
        >
          <div
            class="ant-card-head"
          >
            <div
              class="ant-card-head-wrapper"
            >
              <div
                class="ant-card-head-title"
              >
                reportStatistics.orderAverageReviewTime.title
              </div>
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <div
              class="statistics-value-style"
            >
              <span />
            </div>
          </div>
        </div>
        <span
          class="react-resizable-handle react-resizable-handle-se"
        />
      </div>
      <div
        class="react-grid-item static cssTransforms react-resizable-hide react-resizable"
        style="height: 120px; position: absolute; transform: translate(24px,312px); width: -48px;"
      >
        <div
          class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
          style="height: 100%;"
        >
          <div
            class="ant-card-head"
          >
            <div
              class="ant-card-head-wrapper"
            >
              <div
                class="ant-card-head-title"
              >
                reportStatistics.orderPassRate.title
              </div>
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center statistics-value-style"
            >
              <div
                class="ant-space-item"
              >
                <span />
              </div>
            </div>
          </div>
        </div>
        <span
          class="react-resizable-handle react-resizable-handle-se"
        />
      </div>
      <div
        class="react-grid-item static cssTransforms react-resizable-hide react-resizable"
        style="height: 336px; position: absolute; transform: translate(24px,456px); width: -48px;"
      >
        <div
          class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
          style="height: 100%;"
        >
          <div
            class="ant-card-head"
          >
            <div
              class="ant-card-head-wrapper"
            >
              <div
                class="ant-card-head-title"
              >
                reportStatistics.orderQuantityTrend.title
              </div>
              <div
                class="ant-card-extra"
              >
                <div
                  class="ant-picker ant-picker-range ant-picker-small"
                  data-testid="filterRangePicker"
                >
                  <div
                    class="ant-picker-input ant-picker-input-active"
                  >
                    <input
                      autocomplete="off"
                      placeholder="Start date"
                      readonly=""
                      size="12"
                      value="2022-05-30"
                    />
                  </div>
                  <div
                    class="ant-picker-range-separator"
                  >
                    <span
                      aria-label="to"
                      class="ant-picker-separator"
                    >
                      <span
                        aria-label="swap-right"
                        class="anticon anticon-swap-right"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="swap-right"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="0 0 1024 1024"
                          width="1em"
                        >
                          <path
                            d="M873.1 596.2l-164-208A32 32 0 00684 376h-64.8c-6.7 0-10.4 7.7-6.3 13l144.3 183H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h695.9c26.8 0 41.7-30.8 25.2-51.8z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                  <div
                    class="ant-picker-input"
                  >
                    <input
                      autocomplete="off"
                      placeholder="End date"
                      readonly=""
                      size="12"
                      value="2022-06-29"
                    />
                  </div>
                  <div
                    class="ant-picker-active-bar"
                    style="left: 0px; width: 0px; position: absolute;"
                  />
                  <span
                    class="ant-picker-suffix"
                  >
                    <span
                      aria-label="calendar"
                      class="anticon anticon-calendar"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="calendar"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <div
              color="[\\"#1890ff\\",\\"#ffa940\\",\\"#eb2f96\\",\\"#ff9c6e\\",\\"#fadb14\\",\\"#bae637\\",\\"#ffd666\\",\\"#52c41a\\",\\"#5cdbd3\\"]"
              data="[]"
              h="2.5"
              height="256"
              locale="zh-CN"
              padding="auto"
              slider="{\\"start\\":0,\\"end\\":1}"
              theme="light"
              xaxis="{\\"tickCount\\":7}"
              xfield="date"
              yfield="value"
            />
          </div>
        </div>
        <span
          class="react-resizable-handle react-resizable-handle-se"
        />
      </div>
      <div
        class="react-grid-item static cssTransforms react-resizable-hide react-resizable"
        style="height: 336px; position: absolute; transform: translate(24px,816px); width: -48px;"
      >
        <div
          class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
          style="height: 100%;"
        >
          <div
            class="ant-card-head"
          >
            <div
              class="ant-card-head-wrapper"
            >
              <div
                class="ant-card-head-title"
              >
                reportStatistics.orderStatus.title
              </div>
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <div
              anglefield="value"
              color="[\\"#1890ff\\",\\"#ffa940\\",\\"#eb2f96\\",\\"#ff9c6e\\",\\"#fadb14\\",\\"#bae637\\",\\"#ffd666\\",\\"#52c41a\\",\\"#5cdbd3\\"]"
              colorfield="status"
              data="[{\\"status\\":\\"\\",\\"value\\":0}]"
              h="2.5"
              height="256"
              interactions="[{\\"type\\":\\"element-active\\"}]"
              label="{\\"type\\":\\"inner\\",\\"offset\\":\\"-30%\\",\\"style\\":{\\"fontSize\\":14,\\"textAlign\\":\\"center\\"}}"
              locale="zh-CN"
              padding="auto"
              radius="1"
              theme="light"
            />
          </div>
        </div>
        <span
          class="react-resizable-handle react-resizable-handle-se"
        />
      </div>
      <div
        class="react-grid-item static cssTransforms react-resizable-hide react-resizable"
        style="height: 264px; position: absolute; transform: translate(24px,1176px); width: -48px;"
      >
        <div
          class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
          style="height: 100%;"
        >
          <div
            class="ant-card-head"
          >
            <div
              class="ant-card-head-wrapper"
            >
              <div
                class="ant-card-head-title"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px;"
                  >
                    reportStatistics.orderDbTypeScale.title
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle text-orange"
                      data-testid="order-db-type-scale-tips"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <div
              anglefield="count"
              color="[\\"#1890ff\\",\\"#ffa940\\",\\"#eb2f96\\",\\"#ff9c6e\\",\\"#fadb14\\",\\"#bae637\\",\\"#ffd666\\",\\"#52c41a\\",\\"#5cdbd3\\"]"
              colorfield="instance_type"
              data="[{\\"count\\":0,\\"instance_type\\":\\"\\"}]"
              h="2"
              height="184"
              innerradius="0.6"
              interactions="[{\\"type\\":\\"element-active\\"}]"
              label="{\\"type\\":\\"inner\\",\\"offset\\":\\"-50%\\",\\"content\\":\\"{value}\\",\\"style\\":{\\"textAlign\\":\\"center\\",\\"fontSize\\":14}}"
              legend="{\\"offsetX\\":-30}"
              locale="zh-CN"
              padding="auto"
              radius="1"
              theme="light"
            />
          </div>
        </div>
        <span
          class="react-resizable-handle react-resizable-handle-se"
        />
      </div>
      <div
        class="react-grid-item static cssTransforms react-resizable-hide react-resizable"
        style="height: 264px; position: absolute; transform: translate(24px,1464px); width: -48px;"
      >
        <div
          class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
          style="height: 100%;"
        >
          <div
            class="ant-card-head"
          >
            <div
              class="ant-card-head-wrapper"
            >
              <div
                class="ant-card-head-title"
              >
                reportStatistics.orderInstanceTypeScale.title
              </div>
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <div
              anglefield="count"
              color="[\\"#1890ff\\",\\"#ffa940\\",\\"#eb2f96\\",\\"#ff9c6e\\",\\"#fadb14\\",\\"#bae637\\",\\"#ffd666\\",\\"#52c41a\\",\\"#5cdbd3\\"]"
              colorfield="type"
              data="[{\\"count\\":0,\\"type\\":\\"\\"}]"
              h="2"
              height="184"
              innerradius="0.6"
              interactions="[{\\"type\\":\\"element-active\\"}]"
              label="{\\"type\\":\\"inner\\",\\"offset\\":\\"-50%\\",\\"content\\":\\"{value}\\",\\"style\\":{\\"textAlign\\":\\"center\\",\\"fontSize\\":14}}"
              legend="{\\"offsetX\\":-30}"
              locale="zh-CN"
              padding="auto"
              radius="1"
              theme="light"
            />
          </div>
        </div>
        <span
          class="react-resizable-handle react-resizable-handle-se"
        />
      </div>
      <div
        class="react-grid-item static cssTransforms react-resizable-hide react-resizable"
        style="height: 264px; position: absolute; transform: translate(24px,1752px); width: -48px;"
      >
        <div
          class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
          style="height: 100%;"
        >
          <div
            class="ant-card-head"
          >
            <div
              class="ant-card-head-wrapper"
            >
              <div
                class="ant-card-head-title"
              >
                reportStatistics.licenseUsage.title
              </div>
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <div
              annotations="[{\\"type\\":\\"html\\",\\"position\\":[\\"50%\\",\\"50%\\"]}]"
              barbackground="{}"
              colorfield="type"
              data="[{\\"type\\":\\"\\",\\"percent\\":0},{\\"type\\":\\"\\",\\"percent\\":0}]"
              h="2"
              height="184"
              innerradius="0.2"
              locale="zh-CN"
              maxangle="300"
              radius="1"
              theme="light"
              tooltip="{}"
              xfield="type"
              yfield="percent"
            />
          </div>
        </div>
        <span
          class="react-resizable-handle react-resizable-handle-se"
        />
      </div>
      <div
        class="react-grid-item static cssTransforms react-resizable-hide react-resizable"
        style="height: 552px; position: absolute; transform: translate(24px,2040px); width: -48px;"
      >
        <div
          class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
          style="height: 100%;"
        >
          <div
            class="ant-card-head"
          >
            <div
              class="ant-card-head-wrapper"
            >
              <div
                class="ant-card-head-title"
              >
                <span>
                  reportStatistics.diffUserOrderRejectRate.title
                </span>
              </div>
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <div
              class="ant-table-wrapper"
            >
              <div
                class="ant-spin-nested-loading"
              >
                <div
                  class="ant-spin-container"
                >
                  <div
                    class="ant-table ant-table-small ant-table-empty"
                  >
                    <div
                      class="ant-table-container"
                    >
                      <div
                        class="ant-table-content"
                      >
                        <table
                          style="table-layout: auto;"
                        >
                          <colgroup />
                          <thead
                            class="ant-table-thead"
                          >
                            <tr>
                              <th
                                class="ant-table-cell"
                              >
                                reportStatistics.diffUserOrderRejectRate.columns.username
                              </th>
                              <th
                                class="ant-table-cell"
                              >
                                reportStatistics.diffUserOrderRejectRate.columns.totalOrder
                              </th>
                              <th
                                class="ant-table-cell"
                              >
                                reportStatistics.diffUserOrderRejectRate.columns.rejectRate
                              </th>
                            </tr>
                          </thead>
                          <tbody
                            class="ant-table-tbody"
                          >
                            <tr
                              class="ant-table-placeholder"
                            >
                              <td
                                class="ant-table-cell"
                                colspan="3"
                              >
                                <div
                                  class="ant-empty ant-empty-normal"
                                >
                                  <div
                                    class="ant-empty-image"
                                  >
                                    <svg
                                      class="ant-empty-img-simple"
                                      height="41"
                                      viewBox="0 0 64 41"
                                      width="64"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <g
                                        fill="none"
                                        fill-rule="evenodd"
                                        transform="translate(0 1)"
                                      >
                                        <ellipse
                                          class="ant-empty-img-simple-ellipse"
                                          cx="32"
                                          cy="33"
                                          rx="32"
                                          ry="7"
                                        />
                                        <g
                                          class="ant-empty-img-simple-g"
                                          fill-rule="nonzero"
                                        >
                                          <path
                                            d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                                          />
                                          <path
                                            class="ant-empty-img-simple-path"
                                            d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                                          />
                                        </g>
                                      </g>
                                    </svg>
                                  </div>
                                  <div
                                    class="ant-empty-description"
                                  >
                                    No data
                                  </div>
                                </div>
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <span
          class="react-resizable-handle react-resizable-handle-se"
        />
      </div>
      <div
        class="react-grid-item static cssTransforms react-resizable-hide react-resizable"
        style="height: 552px; position: absolute; transform: translate(24px,2616px); width: -48px;"
      >
        <div
          class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
          style="height: 100%;"
        >
          <div
            class="ant-card-head"
          >
            <div
              class="ant-card-head-wrapper"
            >
              <div
                class="ant-card-head-title"
              >
                <span>
                  reportStatistics.orderAverageExecuteTimeTopN.title
                </span>
              </div>
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <div
              class="ant-table-wrapper"
            >
              <div
                class="ant-spin-nested-loading"
              >
                <div
                  class="ant-spin-container"
                >
                  <div
                    class="ant-table ant-table-small ant-table-empty"
                  >
                    <div
                      class="ant-table-container"
                    >
                      <div
                        class="ant-table-content"
                      >
                        <table
                          style="table-layout: auto;"
                        >
                          <colgroup />
                          <thead
                            class="ant-table-thead"
                          >
                            <tr>
                              <th
                                class="ant-table-cell"
                              >
                                reportStatistics.orderAverageExecuteTimeTopN.columns.dataSourceName
                              </th>
                              <th
                                class="ant-table-cell"
                              >
                                reportStatistics.orderAverageExecuteTimeTopN.columns.average
                              </th>
                              <th
                                class="ant-table-cell"
                              >
                                reportStatistics.orderAverageExecuteTimeTopN.columns.max
                              </th>
                              <th
                                class="ant-table-cell"
                              >
                                reportStatistics.orderAverageExecuteTimeTopN.columns.min
                              </th>
                            </tr>
                          </thead>
                          <tbody
                            class="ant-table-tbody"
                          >
                            <tr
                              class="ant-table-placeholder"
                            >
                              <td
                                class="ant-table-cell"
                                colspan="4"
                              >
                                <div
                                  class="ant-empty ant-empty-normal"
                                >
                                  <div
                                    class="ant-empty-image"
                                  >
                                    <svg
                                      class="ant-empty-img-simple"
                                      height="41"
                                      viewBox="0 0 64 41"
                                      width="64"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <g
                                        fill="none"
                                        fill-rule="evenodd"
                                        transform="translate(0 1)"
                                      >
                                        <ellipse
                                          class="ant-empty-img-simple-ellipse"
                                          cx="32"
                                          cy="33"
                                          rx="32"
                                          ry="7"
                                        />
                                        <g
                                          class="ant-empty-img-simple-g"
                                          fill-rule="nonzero"
                                        >
                                          <path
                                            d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                                          />
                                          <path
                                            class="ant-empty-img-simple-path"
                                            d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                                          />
                                        </g>
                                      </g>
                                    </svg>
                                  </div>
                                  <div
                                    class="ant-empty-description"
                                  >
                                    No data
                                  </div>
                                </div>
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <span
          class="react-resizable-handle react-resizable-handle-se"
        />
      </div>
      <div
        class="react-grid-item static cssTransforms react-resizable-hide react-resizable"
        style="height: 552px; position: absolute; transform: translate(24px,3192px); width: -48px;"
      >
        <div
          class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
          style="height: 100%;"
        >
          <div
            class="ant-card-head"
          >
            <div
              class="ant-card-head-wrapper"
            >
              <div
                class="ant-card-head-title"
              >
                <span>
                  reportStatistics.sqlExecFailedTopN.title
                </span>
              </div>
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <div
              class="ant-table-wrapper"
            >
              <div
                class="ant-spin-nested-loading"
              >
                <div
                  class="ant-spin-container"
                >
                  <div
                    class="ant-table ant-table-small ant-table-empty"
                  >
                    <div
                      class="ant-table-container"
                    >
                      <div
                        class="ant-table-content"
                      >
                        <table
                          style="table-layout: auto;"
                        >
                          <colgroup />
                          <thead
                            class="ant-table-thead"
                          >
                            <tr>
                              <th
                                class="ant-table-cell"
                              >
                                reportStatistics.sqlExecFailedTopN.columns.dataSourceName
                              </th>
                              <th
                                class="ant-table-cell"
                              >
                                reportStatistics.sqlExecFailedTopN.columns.sqlExecFailedPercent
                              </th>
                            </tr>
                          </thead>
                          <tbody
                            class="ant-table-tbody"
                          >
                            <tr
                              class="ant-table-placeholder"
                            >
                              <td
                                class="ant-table-cell"
                                colspan="2"
                              >
                                <div
                                  class="ant-empty ant-empty-normal"
                                >
                                  <div
                                    class="ant-empty-image"
                                  >
                                    <svg
                                      class="ant-empty-img-simple"
                                      height="41"
                                      viewBox="0 0 64 41"
                                      width="64"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <g
                                        fill="none"
                                        fill-rule="evenodd"
                                        transform="translate(0 1)"
                                      >
                                        <ellipse
                                          class="ant-empty-img-simple-ellipse"
                                          cx="32"
                                          cy="33"
                                          rx="32"
                                          ry="7"
                                        />
                                        <g
                                          class="ant-empty-img-simple-g"
                                          fill-rule="nonzero"
                                        >
                                          <path
                                            d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                                          />
                                          <path
                                            class="ant-empty-img-simple-path"
                                            d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                                          />
                                        </g>
                                      </g>
                                    </svg>
                                  </div>
                                  <div
                                    class="ant-empty-description"
                                  >
                                    No data
                                  </div>
                                </div>
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <span
          class="react-resizable-handle react-resizable-handle-se"
        />
      </div>
    </div>
  </section>
</div>
`;

exports[`test ReportStatistics should match snapshot 2`] = `
<div>
  <div
    class="ant-page-header"
  >
    <div
      class="ant-page-header-heading"
    >
      <div
        class="ant-page-header-heading-left"
      >
        <span
          class="ant-page-header-heading-title"
        >
          reportStatistics.title
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
            >
              <span
                aria-label="info-circle"
                class="anticon anticon-info-circle text-orange"
                role="img"
                style="font-size: 14px; margin-left: 6px;"
              >
                <svg
                  aria-hidden="true"
                  data-icon="info-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                  />
                  <path
                    d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                  />
                </svg>
              </span>
            </div>
          </div>
        </span>
      </div>
      <span
        class="ant-page-header-heading-extra"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-default"
              data-testid="refreshReportStatistics"
              type="button"
            >
              <span
                aria-label="sync"
                class="anticon anticon-sync"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="sync"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M168 504.2c1-43.7 10-86.1 26.9-126 17.3-41 42.1-77.7 73.7-109.4S337 212.3 378 195c42.4-17.9 87.4-27 133.9-27s91.5 9.1 133.8 27A341.5 341.5 0 01755 268.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.7 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c0-6.7-7.7-10.5-12.9-6.3l-56.4 44.1C765.8 155.1 646.2 92 511.8 92 282.7 92 96.3 275.6 92 503.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8zm756 7.8h-60c-4.4 0-7.9 3.5-8 7.8-1 43.7-10 86.1-26.9 126-17.3 41-42.1 77.8-73.7 109.4A342.45 342.45 0 01512.1 856a342.24 342.24 0 01-243.2-100.8c-9.9-9.9-19.2-20.4-27.8-31.4l60.2-47a8 8 0 00-3-14.1l-175.7-43c-5-1.2-9.9 2.6-9.9 7.7l-.7 181c0 6.7 7.7 10.5 12.9 6.3l56.4-44.1C258.2 868.9 377.8 932 512.2 932c229.2 0 415.5-183.7 419.8-411.8a8 8 0 00-8-8.2z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </span>
    </div>
  </div>
  <section
    class="padding-content"
  >
    <div
      class="ant-card ant-card-bordered"
    >
      <div
        class="ant-card-body"
      >
        reportStatistics.ceTips
        <div
          class="ant-typography"
        >
          <ul>
            <li>
              <a
                href="https://actiontech.github.io/sqle-docs-cn/"
              >
                https://actiontech.github.io/sqle-docs-cn/
              </a>
            </li>
            <li>
              <a
                href="https://www.actionsky.com/"
              >
                https://www.actionsky.com/
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </section>
  <section
    class="page-report-statistics-namespace"
  >
    <div
      class="react-grid-layout"
      style="height: 3768px;"
    >
      <div
        class="react-grid-item static cssTransforms react-resizable-hide react-resizable"
        style="height: 120px; position: absolute; transform: translate(24px,24px); width: -48px;"
      >
        <div
          class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
          style="height: 100%;"
        >
          <div
            class="ant-card-head"
          >
            <div
              class="ant-card-head-wrapper"
            >
              <div
                class="ant-card-head-title"
              >
                reportStatistics.orderTotalNumbers.title
              </div>
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center statistics-value-style"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                <div
                  class="ant-statistic"
                >
                  <div
                    class="ant-statistic-content"
                  >
                    <span
                      class="ant-statistic-content-value"
                    >
                      <span
                        class="ant-statistic-content-value-int"
                      >
                        100
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                <span>
                  /
                </span>
              </div>
              <div
                class="ant-space-item"
              >
                <div
                  class="ant-statistic"
                >
                  <div
                    class="ant-statistic-content"
                  >
                    <span
                      class="ant-statistic-content-value"
                    >
                      <span
                        class="ant-statistic-content-value-int"
                      >
                        10
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <span
          class="react-resizable-handle react-resizable-handle-se"
        />
      </div>
      <div
        class="react-grid-item static cssTransforms react-resizable-hide react-resizable"
        style="height: 120px; position: absolute; transform: translate(24px,168px); width: -48px;"
      >
        <div
          class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
          style="height: 100%;"
        >
          <div
            class="ant-card-head"
          >
            <div
              class="ant-card-head-wrapper"
            >
              <div
                class="ant-card-head-title"
              >
                reportStatistics.orderAverageReviewTime.title
              </div>
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <div
              class="statistics-value-style"
            >
              <span>
                1h54min
              </span>
            </div>
          </div>
        </div>
        <span
          class="react-resizable-handle react-resizable-handle-se"
        />
      </div>
      <div
        class="react-grid-item static cssTransforms react-resizable-hide react-resizable"
        style="height: 120px; position: absolute; transform: translate(24px,312px); width: -48px;"
      >
        <div
          class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
          style="height: 100%;"
        >
          <div
            class="ant-card-head"
          >
            <div
              class="ant-card-head-wrapper"
            >
              <div
                class="ant-card-head-title"
              >
                reportStatistics.orderPassRate.title
              </div>
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center statistics-value-style"
            >
              <div
                class="ant-space-item"
              >
                <span>
                  22.3%
                </span>
              </div>
            </div>
          </div>
        </div>
        <span
          class="react-resizable-handle react-resizable-handle-se"
        />
      </div>
      <div
        class="react-grid-item static cssTransforms react-resizable-hide react-resizable"
        style="height: 336px; position: absolute; transform: translate(24px,456px); width: -48px;"
      >
        <div
          class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
          style="height: 100%;"
        >
          <div
            class="ant-card-head"
          >
            <div
              class="ant-card-head-wrapper"
            >
              <div
                class="ant-card-head-title"
              >
                reportStatistics.orderQuantityTrend.title
              </div>
              <div
                class="ant-card-extra"
              >
                <div
                  class="ant-picker ant-picker-range ant-picker-small"
                  data-testid="filterRangePicker"
                >
                  <div
                    class="ant-picker-input ant-picker-input-active"
                  >
                    <input
                      autocomplete="off"
                      placeholder="Start date"
                      readonly=""
                      size="12"
                      value="2022-05-30"
                    />
                  </div>
                  <div
                    class="ant-picker-range-separator"
                  >
                    <span
                      aria-label="to"
                      class="ant-picker-separator"
                    >
                      <span
                        aria-label="swap-right"
                        class="anticon anticon-swap-right"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="swap-right"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="0 0 1024 1024"
                          width="1em"
                        >
                          <path
                            d="M873.1 596.2l-164-208A32 32 0 00684 376h-64.8c-6.7 0-10.4 7.7-6.3 13l144.3 183H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h695.9c26.8 0 41.7-30.8 25.2-51.8z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                  <div
                    class="ant-picker-input"
                  >
                    <input
                      autocomplete="off"
                      placeholder="End date"
                      readonly=""
                      size="12"
                      value="2022-06-29"
                    />
                  </div>
                  <div
                    class="ant-picker-active-bar"
                    style="left: 0px; width: 0px; position: absolute;"
                  />
                  <span
                    class="ant-picker-suffix"
                  >
                    <span
                      aria-label="calendar"
                      class="anticon anticon-calendar"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="calendar"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <div
              color="[\\"#1890ff\\",\\"#ffa940\\",\\"#eb2f96\\",\\"#ff9c6e\\",\\"#fadb14\\",\\"#bae637\\",\\"#ffd666\\",\\"#52c41a\\",\\"#5cdbd3\\"]"
              data="[{\\"date\\":\\"2022-08-01\\",\\"value\\":33},{\\"date\\":\\"2022-08-02\\",\\"value\\":33},{\\"date\\":\\"2022-08-03\\",\\"value\\":33},{\\"date\\":\\"2022-08-04\\",\\"value\\":33},{\\"date\\":\\"2022-08-05\\",\\"value\\":33},{\\"date\\":\\"2022-08-06\\",\\"value\\":33},{\\"date\\":\\"2022-08-07\\",\\"value\\":33},{\\"date\\":\\"2022-08-08\\",\\"value\\":33},{\\"date\\":\\"2022-08-09\\",\\"value\\":33},{\\"date\\":\\"2022-08-10\\",\\"value\\":33},{\\"date\\":\\"2022-08-11\\",\\"value\\":33},{\\"date\\":\\"2022-08-12\\",\\"value\\":33},{\\"date\\":\\"2022-08-13\\",\\"value\\":33},{\\"date\\":\\"2022-08-14\\",\\"value\\":33},{\\"date\\":\\"2022-08-15\\",\\"value\\":33},{\\"date\\":\\"2022-08-16\\",\\"value\\":33},{\\"date\\":\\"2022-08-17\\",\\"value\\":33},{\\"date\\":\\"2022-08-18\\",\\"value\\":33},{\\"date\\":\\"2022-08-19\\",\\"value\\":33},{\\"date\\":\\"2022-08-20\\",\\"value\\":33},{\\"date\\":\\"2022-08-21\\",\\"value\\":33},{\\"date\\":\\"2022-08-22\\",\\"value\\":33},{\\"date\\":\\"2022-08-23\\",\\"value\\":33},{\\"date\\":\\"2022-08-24\\",\\"value\\":33},{\\"date\\":\\"2022-08-25\\",\\"value\\":33},{\\"date\\":\\"2022-08-26\\",\\"value\\":33},{\\"date\\":\\"2022-08-27\\",\\"value\\":33},{\\"date\\":\\"2022-08-28\\",\\"value\\":33},{\\"date\\":\\"2022-08-29\\",\\"value\\":33},{\\"date\\":\\"2022-08-30\\",\\"value\\":33}]"
              h="2.5"
              height="256"
              locale="zh-CN"
              padding="auto"
              slider="{\\"start\\":0,\\"end\\":1}"
              theme="light"
              xaxis="{\\"tickCount\\":7}"
              xfield="date"
              yfield="value"
            />
          </div>
        </div>
        <span
          class="react-resizable-handle react-resizable-handle-se"
        />
      </div>
      <div
        class="react-grid-item static cssTransforms react-resizable-hide react-resizable"
        style="height: 336px; position: absolute; transform: translate(24px,816px); width: -48px;"
      >
        <div
          class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
          style="height: 100%;"
        >
          <div
            class="ant-card-head"
          >
            <div
              class="ant-card-head-wrapper"
            >
              <div
                class="ant-card-head-title"
              >
                reportStatistics.orderStatus.title
              </div>
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <div
              anglefield="value"
              color="[\\"#1890ff\\",\\"#ffa940\\",\\"#eb2f96\\",\\"#ff9c6e\\",\\"#fadb14\\",\\"#bae637\\",\\"#ffd666\\",\\"#52c41a\\",\\"#5cdbd3\\"]"
              colorfield="status"
              data="[{\\"value\\":12,\\"status\\":\\"reportStatistics.orderStatus.closed\\"},{\\"value\\":32,\\"status\\":\\"reportStatistics.orderStatus.executing\\"},{\\"value\\":22,\\"status\\":\\"reportStatistics.orderStatus.executionSuccess\\"},{\\"value\\":34,\\"status\\":\\"reportStatistics.orderStatus.rejected\\"},{\\"value\\":22,\\"status\\":\\"reportStatistics.orderStatus.waitingForAudit\\"},{\\"value\\":12,\\"status\\":\\"reportStatistics.orderStatus.waitingForExecution\\"}]"
              h="2.5"
              height="256"
              interactions="[{\\"type\\":\\"element-active\\"}]"
              label="{\\"type\\":\\"inner\\",\\"offset\\":\\"-30%\\",\\"style\\":{\\"fontSize\\":14,\\"textAlign\\":\\"center\\"}}"
              locale="zh-CN"
              padding="auto"
              radius="1"
              theme="light"
            />
          </div>
        </div>
        <span
          class="react-resizable-handle react-resizable-handle-se"
        />
      </div>
      <div
        class="react-grid-item static cssTransforms react-resizable-hide react-resizable"
        style="height: 264px; position: absolute; transform: translate(24px,1176px); width: -48px;"
      >
        <div
          class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
          style="height: 100%;"
        >
          <div
            class="ant-card-head"
          >
            <div
              class="ant-card-head-wrapper"
            >
              <div
                class="ant-card-head-title"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px;"
                  >
                    reportStatistics.orderDbTypeScale.title
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle text-orange"
                      data-testid="order-db-type-scale-tips"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <div
              anglefield="count"
              color="[\\"#1890ff\\",\\"#ffa940\\",\\"#eb2f96\\",\\"#ff9c6e\\",\\"#fadb14\\",\\"#bae637\\",\\"#ffd666\\",\\"#52c41a\\",\\"#5cdbd3\\"]"
              colorfield="instance_type"
              data="[{\\"instance_type\\":\\"Mysql\\",\\"count\\":27},{\\"instance_type\\":\\"Oracle\\",\\"count\\":25},{\\"instance_type\\":\\"Redis\\",\\"count\\":18},{\\"instance_type\\":\\"MongoDB\\",\\"count\\":15},{\\"instance_type\\":\\"TiDB\\",\\"count\\":5}]"
              h="2"
              height="184"
              innerradius="0.6"
              interactions="[{\\"type\\":\\"element-active\\"}]"
              label="{\\"type\\":\\"inner\\",\\"offset\\":\\"-50%\\",\\"content\\":\\"{value}\\",\\"style\\":{\\"textAlign\\":\\"center\\",\\"fontSize\\":14}}"
              legend="{\\"offsetX\\":-30}"
              locale="zh-CN"
              padding="auto"
              radius="1"
              theme="light"
            />
          </div>
        </div>
        <span
          class="react-resizable-handle react-resizable-handle-se"
        />
      </div>
      <div
        class="react-grid-item static cssTransforms react-resizable-hide react-resizable"
        style="height: 264px; position: absolute; transform: translate(24px,1464px); width: -48px;"
      >
        <div
          class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
          style="height: 100%;"
        >
          <div
            class="ant-card-head"
          >
            <div
              class="ant-card-head-wrapper"
            >
              <div
                class="ant-card-head-title"
              >
                reportStatistics.orderInstanceTypeScale.title
              </div>
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <div
              anglefield="count"
              color="[\\"#1890ff\\",\\"#ffa940\\",\\"#eb2f96\\",\\"#ff9c6e\\",\\"#fadb14\\",\\"#bae637\\",\\"#ffd666\\",\\"#52c41a\\",\\"#5cdbd3\\"]"
              colorfield="type"
              data="[{\\"type\\":\\"Mysql\\",\\"count\\":27},{\\"type\\":\\"Oracle\\",\\"count\\":25},{\\"type\\":\\"Redis\\",\\"count\\":18},{\\"type\\":\\"MongoDB\\",\\"count\\":15},{\\"type\\":\\"TiDB\\",\\"count\\":5}]"
              h="2"
              height="184"
              innerradius="0.6"
              interactions="[{\\"type\\":\\"element-active\\"}]"
              label="{\\"type\\":\\"inner\\",\\"offset\\":\\"-50%\\",\\"content\\":\\"{value}\\",\\"style\\":{\\"textAlign\\":\\"center\\",\\"fontSize\\":14}}"
              legend="{\\"offsetX\\":-30}"
              locale="zh-CN"
              padding="auto"
              radius="1"
              theme="light"
            />
          </div>
        </div>
        <span
          class="react-resizable-handle react-resizable-handle-se"
        />
      </div>
      <div
        class="react-grid-item static cssTransforms react-resizable-hide react-resizable"
        style="height: 264px; position: absolute; transform: translate(24px,1752px); width: -48px;"
      >
        <div
          class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
          style="height: 100%;"
        >
          <div
            class="ant-card-head"
          >
            <div
              class="ant-card-head-wrapper"
            >
              <div
                class="ant-card-head-title"
              >
                reportStatistics.licenseUsage.title
              </div>
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <div
              annotations="[{\\"type\\":\\"html\\",\\"position\\":[\\"50%\\",\\"50%\\"]}]"
              barbackground="{}"
              colorfield="type"
              data="[{\\"type\\":\\"test1\\",\\"percent\\":0.1},{\\"type\\":\\"test2\\",\\"percent\\":0.2},{\\"type\\":\\"test3\\",\\"percent\\":0.3},{\\"type\\":\\"test4\\",\\"percent\\":1},{\\"type\\":\\"test4\\",\\"percent\\":0},{\\"type\\":\\"user\\",\\"percent\\":0.2}]"
              h="2"
              height="184"
              innerradius="0.2"
              locale="zh-CN"
              maxangle="360"
              radius="1"
              theme="light"
              tooltip="{}"
              xfield="type"
              yfield="percent"
            />
          </div>
        </div>
        <span
          class="react-resizable-handle react-resizable-handle-se"
        />
      </div>
      <div
        class="react-grid-item static cssTransforms react-resizable-hide react-resizable"
        style="height: 552px; position: absolute; transform: translate(24px,2040px); width: -48px;"
      >
        <div
          class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
          style="height: 100%;"
        >
          <div
            class="ant-card-head"
          >
            <div
              class="ant-card-head-wrapper"
            >
              <div
                class="ant-card-head-title"
              >
                <span>
                  reportStatistics.diffUserOrderRejectRate.title
                </span>
              </div>
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <div
              class="ant-table-wrapper"
            >
              <div
                class="ant-spin-nested-loading"
              >
                <div
                  class="ant-spin-container"
                >
                  <div
                    class="ant-table ant-table-small"
                  >
                    <div
                      class="ant-table-container"
                    >
                      <div
                        class="ant-table-content"
                      >
                        <table
                          style="table-layout: auto;"
                        >
                          <colgroup />
                          <thead
                            class="ant-table-thead"
                          >
                            <tr>
                              <th
                                class="ant-table-cell"
                              >
                                reportStatistics.diffUserOrderRejectRate.columns.username
                              </th>
                              <th
                                class="ant-table-cell"
                              >
                                reportStatistics.diffUserOrderRejectRate.columns.totalOrder
                              </th>
                              <th
                                class="ant-table-cell"
                              >
                                reportStatistics.diffUserOrderRejectRate.columns.rejectRate
                              </th>
                            </tr>
                          </thead>
                          <tbody
                            class="ant-table-tbody"
                          >
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="user0"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                user0
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                22
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <span
                                  class="ant-typography text-blue"
                                >
                                  12.34%
                                </span>
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="user1"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                user1
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                22
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <span
                                  class="ant-typography text-blue"
                                >
                                  12.34%
                                </span>
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="user2"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                user2
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                22
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <span
                                  class="ant-typography text-blue"
                                >
                                  12.34%
                                </span>
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="user3"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                user3
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                22
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <span
                                  class="ant-typography text-blue"
                                >
                                  12.34%
                                </span>
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="user4"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                user4
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                22
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <span
                                  class="ant-typography text-blue"
                                >
                                  12.34%
                                </span>
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="user5"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                user5
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                22
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <span
                                  class="ant-typography text-blue"
                                >
                                  12.34%
                                </span>
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="user6"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                user6
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                22
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <span
                                  class="ant-typography text-blue"
                                >
                                  12.34%
                                </span>
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="user7"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                user7
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                22
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <span
                                  class="ant-typography text-blue"
                                >
                                  12.34%
                                </span>
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="user8"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                user8
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                22
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <span
                                  class="ant-typography text-blue"
                                >
                                  12.34%
                                </span>
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="user9"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                user9
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                22
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <span
                                  class="ant-typography text-blue"
                                >
                                  12.34%
                                </span>
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <span
          class="react-resizable-handle react-resizable-handle-se"
        />
      </div>
      <div
        class="react-grid-item static cssTransforms react-resizable-hide react-resizable"
        style="height: 552px; position: absolute; transform: translate(24px,2616px); width: -48px;"
      >
        <div
          class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
          style="height: 100%;"
        >
          <div
            class="ant-card-head"
          >
            <div
              class="ant-card-head-wrapper"
            >
              <div
                class="ant-card-head-title"
              >
                <span>
                  reportStatistics.orderAverageExecuteTimeTopN.title
                </span>
              </div>
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <div
              class="ant-table-wrapper"
            >
              <div
                class="ant-spin-nested-loading"
              >
                <div
                  class="ant-spin-container"
                >
                  <div
                    class="ant-table ant-table-small"
                  >
                    <div
                      class="ant-table-container"
                    >
                      <div
                        class="ant-table-content"
                      >
                        <table
                          style="table-layout: auto;"
                        >
                          <colgroup />
                          <thead
                            class="ant-table-thead"
                          >
                            <tr>
                              <th
                                class="ant-table-cell"
                              >
                                reportStatistics.orderAverageExecuteTimeTopN.columns.dataSourceName
                              </th>
                              <th
                                class="ant-table-cell"
                              >
                                reportStatistics.orderAverageExecuteTimeTopN.columns.average
                              </th>
                              <th
                                class="ant-table-cell"
                              >
                                reportStatistics.orderAverageExecuteTimeTopN.columns.max
                              </th>
                              <th
                                class="ant-table-cell"
                              >
                                reportStatistics.orderAverageExecuteTimeTopN.columns.min
                              </th>
                            </tr>
                          </thead>
                          <tbody
                            class="ant-table-tbody"
                          >
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="0"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                instance_name0
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                3s
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                4s
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                5s
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="1"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                instance_name1
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                3s
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                4s
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                5s
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="2"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                instance_name2
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                3s
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                4s
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                5s
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="3"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                instance_name3
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                3s
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                4s
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                5s
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="4"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                instance_name4
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                3s
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                4s
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                5s
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="5"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                instance_name5
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                3s
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                4s
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                5s
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="6"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                instance_name6
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                3s
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                4s
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                5s
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="7"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                instance_name7
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                3s
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                4s
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                5s
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="8"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                instance_name8
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                3s
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                4s
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                5s
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="9"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                instance_name9
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                3s
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                4s
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                5s
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <span
          class="react-resizable-handle react-resizable-handle-se"
        />
      </div>
      <div
        class="react-grid-item static cssTransforms react-resizable-hide react-resizable"
        style="height: 552px; position: absolute; transform: translate(24px,3192px); width: -48px;"
      >
        <div
          class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
          style="height: 100%;"
        >
          <div
            class="ant-card-head"
          >
            <div
              class="ant-card-head-wrapper"
            >
              <div
                class="ant-card-head-title"
              >
                <span>
                  reportStatistics.sqlExecFailedTopN.title
                </span>
              </div>
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <div
              class="ant-table-wrapper"
            >
              <div
                class="ant-spin-nested-loading"
              >
                <div
                  class="ant-spin-container"
                >
                  <div
                    class="ant-table ant-table-small"
                  >
                    <div
                      class="ant-table-container"
                    >
                      <div
                        class="ant-table-content"
                      >
                        <table
                          style="table-layout: auto;"
                        >
                          <colgroup />
                          <thead
                            class="ant-table-thead"
                          >
                            <tr>
                              <th
                                class="ant-table-cell"
                              >
                                reportStatistics.sqlExecFailedTopN.columns.dataSourceName
                              </th>
                              <th
                                class="ant-table-cell"
                              >
                                reportStatistics.sqlExecFailedTopN.columns.sqlExecFailedPercent
                              </th>
                            </tr>
                          </thead>
                          <tbody
                            class="ant-table-tbody"
                          >
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="0"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                instance_name0
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <span
                                  class="ant-typography text-blue"
                                >
                                  11.11%
                                </span>
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="1"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                instance_name1
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <span
                                  class="ant-typography text-blue"
                                >
                                  11.11%
                                </span>
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="2"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                instance_name2
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <span
                                  class="ant-typography text-blue"
                                >
                                  11.11%
                                </span>
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="3"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                instance_name3
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <span
                                  class="ant-typography text-blue"
                                >
                                  11.11%
                                </span>
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="4"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                instance_name4
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <span
                                  class="ant-typography text-blue"
                                >
                                  11.11%
                                </span>
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="5"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                instance_name5
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <span
                                  class="ant-typography text-blue"
                                >
                                  11.11%
                                </span>
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="6"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                instance_name6
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <span
                                  class="ant-typography text-blue"
                                >
                                  11.11%
                                </span>
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="7"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                instance_name7
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <span
                                  class="ant-typography text-blue"
                                >
                                  11.11%
                                </span>
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="8"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                instance_name8
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <span
                                  class="ant-typography text-blue"
                                >
                                  11.11%
                                </span>
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="9"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                instance_name9
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <span
                                  class="ant-typography text-blue"
                                >
                                  11.11%
                                </span>
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <span
          class="react-resizable-handle react-resizable-handle-se"
        />
      </div>
    </div>
  </section>
</div>
`;
